@@ -10,6 +10,5 @@ JARS=$JARS":target/slf4j-log4j12-1.7.10.jar"
 JARS=$JARS":target/timingframework-1.0.jar"
 JARS=$JARS":target/fits-ow-0.1.jar"
 
-#java -XX:+DoEscapeAnalysis -XX:+UseConcMarkSweepGC -Xmx1g -cp .:$JARS fr.inria.zvtm.cluster.SlaveApp -n WallFITSOW -b 0 -a $* &
 
 java -server -XX:+DoEscapeAnalysis -XX:+UseConcMarkSweepGC -Djava.net.preferIPv4Stack=true -Xmx4096M -Xms2048M -Djgroups.bind_addr=$IP -Dcom.sun.media.jai.disableMediaLib=true -cp .:$JARS fr.inria.zvtm.cluster.SlaveApp -n WallFITSOW -b 0
